A shit ton of design reconsidarations

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MAIL=Abdulrokibadebisi@gmail.com
-PASS=zznyiydigthnfqdq
+FROM=Abdulrokibadebisi@gmail.com
+REPLY_TO=Abdulrokibadebisi@gmail.com
+PASSWD=zznyiydigthnfqdq
